--- a/css/styles.css
+++ b/css/styles.css
@@ -33,13 +33,29 @@ Basic rules to write CSS
 (the styles used everywhere in the page (like the Body) or styles which are used in more than 2 of the modules bellow (h2, h3, h4, h5, h6, p, a, ul, li))
 */
 
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 body {
     background-color: LightGray;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    color: #838994;
+    letter-spacing: 0.03em;
+    -webkit-font-smoothing: antialiased;
 }
 
 .content {
     margin: 0 auto;
     padding: 0px 15px
+}
+
+ol,
+ul {
+    list-style: none;
 }
 
 
@@ -70,6 +86,22 @@ body {
 .top-navigation .links li {
     display: inline-block;
     margin-left: 1.563em;
+}
+
+.top-navigation .links li a {
+    cursor: pointer;
+    color: #838994;
+    text-decoration: none;
+}
+
+.top-navigation .links li.active a {
+    color: #4c5058;
+    font-weight: 500;
+}
+
+.top-navigation .links li a:hover {
+    cursor: pointer;
+    color: #333333;
 }
 
 
