--- a/css/styles.css
+++ b/css/styles.css
@@ -49,13 +49,22 @@ body {
 }
 
 .content {
+    width: 970px;
     margin: 0 auto;
-    padding: 0px 15px
+    padding: 0 0.938em;
+    /*    border: 1px solid #ffffff;*/
 }
 
 ol,
 ul {
     list-style: none;
+}
+
+button {
+    text-shadow: none;
+    border-style: none;
+    border-radius: 4px;
+    padding: 1rem 1.5rem;
 }
 
 
@@ -68,7 +77,6 @@ ul {
 }
 
 .top-navigation .content {
-    width: 970px;
     height: 70px;
 }
 
@@ -108,6 +116,41 @@ ul {
 /* Content styles (Main Module)
 (all the styles inside the < sections > or < aside > tags)
 */
+
+.introduction {
+    background-image: url('../images/first-background.jpg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 41.938em;
+    overflow: auto;
+    text-align: center;
+}
+
+.introduction h1 {
+    margin-top: 4.1em;
+    margin-bottom: 0em;
+    font-size: 3.125em;
+}
+
+.introduction h1,
+.introduction h3 {
+    color: #ffffff;
+    font-weight: 300;
+}
+
+.introduction h3 {
+    margin-top: 0.5em;
+    font-size: 1.5em;
+}
+
+.introduction .buttons {
+    font-size: 1.125em;
+    color: #ffffff;
+    margin-top: 1.4em;
+    width: 5.688em;
+    background-color: #f15a29;
+}
 
 
 /* Footer styles (Main Module)
