--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,15 @@ button {
     background-color: #f15a29;
 }
 
+.cases h2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.75em;
+    font-weight: 300;
+    color: #333333;
+    text-align: center;
+    margin-top: 2em;
+}
+
 
 /* Footer styles (Main Module)
 (all the styles inside the < footer > tag)
