--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,6 @@ body {
     width: 970px;
     margin: 0 auto;
     padding: 0 0.938em;
-    /*    border: 1px solid #ffffff;*/
 }
 
 ol,
@@ -64,7 +63,16 @@ button {
     text-shadow: none;
     border-style: none;
     border-radius: 4px;
-    padding: 1rem 1.5rem;
+    padding: 1em 1.5em;
+}
+
+.cases .devices {
+    width: 33.3333333%;
+    display: inline-block;
+    /* styles to assist with debugging */
+    /*    border: 1px solid black;*/
+    /*    box-sizing: border-box;*/
+    /*    margin-right: -0.34em;*/
 }
 
 
@@ -74,6 +82,9 @@ button {
 
 .top-navigation {
     background-color: #fff;
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
 }
 
 .top-navigation .content {
@@ -122,7 +133,7 @@ button {
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 41.938em;
+    height: 45.938em;
     overflow: auto;
     text-align: center;
 }
@@ -158,7 +169,23 @@ button {
     font-weight: 300;
     color: #333333;
     text-align: center;
-    margin-top: 2em;
+    margin: 1.5em 0em;
+}
+
+.cases .flexParent h3 {
+    font-weight: 400;
+    font-size: 1.563em;
+    color: #333333;
+    margin: 1.5em 0px 1.875em;
+}
+
+.cases .flexParent {
+    display: flex;
+}
+
+.cases .flexParent .devices {
+    display: flex;
+    justify-content: center;
 }
 
 
