--- a/css/styles.css
+++ b/css/styles.css
@@ -40,16 +40,15 @@ Basic rules to write CSS
 }
 
 body {
-    background-color: LightGray;
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+    font-size: 1em;
     color: #838994;
     letter-spacing: 0.03em;
     -webkit-font-smoothing: antialiased;
 }
 
 .content {
-    width: 970px;
+    width: 60.625em;
     margin: 0 auto;
     padding: 0 0.938em;
 }
@@ -62,7 +61,7 @@ ul {
 button {
     text-shadow: none;
     border-style: none;
-    border-radius: 4px;
+    border-radius: 0.25em;
     padding: 1em 1.5em;
 }
 
@@ -70,7 +69,7 @@ button {
     width: 33.3333333%;
     display: inline-block;
     /* styles to assist with debugging */
-    /*    border: 1px solid black;*/
+    /*    border: 0.0625em solid black;*/
     /*    box-sizing: border-box;*/
     /*    margin-right: -0.34em;*/
 }
@@ -88,7 +87,7 @@ button {
 }
 
 .top-navigation .content {
-    height: 70px;
+    height: 4.375em;
 }
 
 .top-navigation .logo {
@@ -139,7 +138,7 @@ button {
 }
 
 .introduction h1 {
-    margin-top: 4.1em;
+    margin-top: 5.5em;
     margin-bottom: 0em;
     font-size: 3.125em;
 }
@@ -157,10 +156,19 @@ button {
 
 .introduction .buttons {
     font-size: 1.125em;
-    color: #ffffff;
     margin-top: 1.4em;
     width: 5.688em;
     background-color: #f15a29;
+}
+
+.introduction a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.introduction button:hover {
+    cursor: pointer;
+    background-color: #d9400e;
 }
 
 .cases h2 {
@@ -169,14 +177,14 @@ button {
     font-weight: 300;
     color: #333333;
     text-align: center;
-    margin: 1.5em 0em;
+    margin: 2.8em 0em 1em 0em;
 }
 
 .cases .flexParent h3 {
     font-weight: 400;
     font-size: 1.563em;
     color: #333333;
-    margin: 1.5em 0px 1.875em;
+    margin: 1.5em 0em 1.875em;
 }
 
 .cases .flexParent {
@@ -192,6 +200,73 @@ button {
 /* Footer styles (Main Module)
 (all the styles inside the < footer > tag)
 */
+
+.social {
+    background-color: #fff;
+    overflow: auto;
+    padding-bottom: 9.375em;
+    color: #333333;
+    text-align: center;
+}
+
+.social hr {
+    border: 0;
+    border-top: 0.0625em solid #eaebec;
+    margin: 5.3em 0em 1.1em 0em;
+}
+
+.social h5 {
+    font-weight: 400;
+}
+
+.social .icons > li {
+    border-radius: 1.25em;
+    width: 2.3em;
+    height: 1.0em;
+    display: inline-block;
+    margin: 1.25em 0.3125em;
+    border: 0.0625em solid #eaebec;
+    padding: 0.625em 0;
+    text-align: center;
+}
+
+.social .twitter {
+    color: #55acee;
+}
+
+.social .facebook {
+    color: #4c66a4;
+}
+
+.social .instagram {
+    color: #3f729b;
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 0.875em/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
+
+.fa-twitter:before {
+    content: "\f099";
+}
+
+.fa-facebook:before {
+    content: "\f09a";
+}
+
+.fa-instagram:before {
+    content: "\f16d";
+}
+
+.social .copy {
+    font-size: 0.9em;
+    font-weight: 300;
+    color: #838994;
+}
 
 
 /*
