--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,9 @@ body {
 }
 
 .content {
-    width: 60.625em;
+    width: 75%;
     margin: 0 auto;
-    padding: 0 0.938em;
+    /*    padding: 0 0.938em;*/
 }
 
 ol,
@@ -205,7 +205,7 @@ button {
     background-color: #fff;
     overflow: auto;
     padding-bottom: 9.375em;
-    color: #333333;
+    /*    color: #333333;*/
     text-align: center;
 }
 
@@ -275,3 +275,69 @@ Responsive styles
 (the very last module in the CSS, contains all the media queries and it is dealing with the compatibility with mobiles and tablets)
 place all the mobile tables styles bellow this line
 */
+
+
+/*ipad lanscape / small laptop*/
+
+@media only screen and (max-width: 1024px) {
+    /* acting like an IF statement, the media query is a set of conditions in which the containing css will be applied
+    for example the statament above says: IF the media on which this CSS is going to used is SCREEN (Mobiles, Tables, Laptops, Desktops or Projectors) and the maximum resolution of that device is 1024px, THEN apply the body color blue for all the text
+    */
+    body {
+        color: blue !important;
+    }
+}
+
+
+/*ipad potrait*/
+
+@media only screen and (max-width: 768px) {
+    body {
+        color: red !important
+    }
+    .content {
+        width: 95%;
+    }
+    .top-navigation .links li {
+        margin-left: 0.4em;
+    }
+    .introduction {
+        height: 23em;
+    }
+    .introduction h1 {
+        margin-top: 3em;
+        font-size: 2.55em;
+    }
+    .introduction h3 {
+        font-size: 1.3em;
+    }
+    .cases h2 {
+        font-size: 2em;
+        margin: 1.5em 0em 1em 0em;
+    }
+    .cases .devices {
+        width: 90%;
+        display: block;
+    }
+    .cases .flexParent .devices {
+        display: block;
+    }
+}
+
+
+/*iPhone landscape*/
+
+@media only screen and (max-width: 480px) {
+    body {
+        color: green !important;
+    }
+}
+
+
+/*iPhone portrait*/
+
+@media only screen and (max-width: 320px) {
+    body {
+        color: purple !important;
+    }
+}
