--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ button {
 
 .top-navigation .logo {
     height: 4.375em;
+    /*    border: 1px solid #ff0000;*/
 }
 
 .top-navigation .links {
@@ -321,6 +322,12 @@ place all the mobile tables styles bellow this line
         font-size: 1.563em;
         margin: 1.5em 0em 1em 0em;
     }
+    .social {
+        padding-bottom: 2em;
+    }
+    .social hr {
+        margin-top: 2em;
+    }
 }
 
 
@@ -330,6 +337,42 @@ place all the mobile tables styles bellow this line
     body {
         color: green !important;
     }
+    .content {
+        width: 100%;
+    }
+    .top-navigation .links li:last-child {
+        margin-right: 0.5em;
+    }
+    .introduction {
+        height: 18em;
+    }
+    .introduction h1 {
+        margin-top: 3.5em;
+        font-size: 1.75em;
+    }
+    .introduction h3 {
+        font-size: 1.05em;
+    }
+    .cases h2 {
+        font-size: 1.5em;
+        margin-top: 0.75em;
+    }
+    .cases .flexParent {
+        /*        display: block;*/
+    }
+    .cases .devices {
+        /*        width: 100%;*/
+    }
+    .cases .flexParent h3 {
+        font-size: 1.2em;
+        margin-top: 1em;
+    }
+    .social {
+        padding-bottom: 1em;
+    }
+    .social hr {
+        margin-top: 1em;
+    }
 }
 
 
@@ -338,5 +381,44 @@ place all the mobile tables styles bellow this line
 @media only screen and (max-width: 320px) {
     body {
         color: purple !important;
+    }
+    .top-navigation .logo {
+        display: block;
+        height: 2.5em;
+        margin: 0.3em;
+    }
+    .top-navigation .links {
+        float: left;
+        margin-top: 0em;
+        width: 100%;
+    }
+    .top-navigation .links li {
+        display: block;
+        padding: 0.3em;
+        border-bottom: 0.1em solid #dddddd;
+        text-align: center;
+    }
+    .introduction {
+        height: 27em;
+    }
+    .introduction h1 {
+        margin-top: 9.3em;
+        font-size: 1.75em;
+    }
+    .introduction h3 {
+        font-size: 0.95em;
+    }
+    .cases h2 {
+        font-size: 1.375em;
+        margin: 0.5em 0em;
+    }
+    .cases .flexParent h3 {
+        margin-top: 0.5em;
+    }
+    .social {
+        padding-bottom: 0.5em;
+    }
+    .social hr {
+        margin-top: 0.5em;
     }
 }
